# agent-pydantic-poc

./: pyproject.toml
src/: main.py
src/agents/dataset_agent/: dataset_editor.py  engine_requests.py  query_extractor.py  query_generator.py  query_translator.py
src/common/providers/: model_providers.py
